feat: rebrand to TAFIN and add search fallbacks

--- a/env.example
+++ b/env.example
@@ -1,5 +1,19 @@
 # LLM API Keys
-OPENAI_API_KEY=your-openai-api-key
+TAFIN_OPENAI_API_KEY=your-openai-api-key
+# Optional: keep OPENAI_API_KEY set to remain compatible with other tools
+# OPENAI_API_KEY=your-openai-api-key
 
 # Stock Market API Key
-FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
+TAFIN_FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
+# Optional legacy variable
+# FINANCIAL_DATASETS_API_KEY=your-financial-datasets-api-key
+
+# Search API Key (Serper.dev)
+TAFIN_SERPER_API_KEY=your-serper-api-key
+# Optional legacy variable
+# SERPER_API_KEY=your-serper-api-key
+
+# Market Data (Alpha Vantage)
+TAFIN_ALPHA_VANTAGE_API_KEY=your-alpha-vantage-api-key
+# Optional legacy variable
+# ALPHA_VANTAGE_API_KEY=your-alpha-vantage-api-key
