--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "dexter-agent",
+  "name": "tafin-agent",
   "version": "0.1.0",
-  "description": "An autonomous financial research agent that performs deep analysis using task planning, introspection, and real-time market data. Inspired by Claude Code, but built specifically for financial research.",
+  "description": "TAFIN is an autonomous financial research agent that plans tasks, introspects, and uses real-time market data for deep analysis.",
   "main": "index.js",
   "bin": {
-    "dexter-agent": "./index.js"
+    "tafin-agent": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "uv pip install ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Virat Singh",
